pkg/front_end/testcases/general/assign_to_never.dart.strong.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/general/assign_to_never.dart:8:12: Error: A value of type 'int' can't be assigned to a variable of type 'Never'.
//   setter = 0;
//            ^
//
import self as self;

static set setter(Never n) → void {}
static method method() → dynamic {
  self::setter = invalid-expression "pkg/front_end/testcases/general/assign_to_never.dart:8:12: Error: A value of type 'int' can't be assigned to a variable of type 'Never'.
  setter = 0;
           ^" in 0 as{TypeError} Never;
}
